--- a/Lab3.csproj
+++ b/Lab3.csproj
@@ -37,8 +37,12 @@
     <Reference Include="System.Drawing" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="StandardTicket.cs" />
+    <Compile Include="Printer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Sales.cs" />
+    <Compile Include="Ticket.cs" />
     <Compile Include="UI.cs">
       <SubType>Form</SubType>
     </Compile>
