--- a/Lab3.csproj
+++ b/Lab3.csproj
@@ -37,6 +37,7 @@
     <Reference Include="System.Drawing" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Payment.cs" />
     <Compile Include="Receipt.cs" />
     <Compile Include="StandardTicket.cs" />
     <Compile Include="Printer.cs" />
